<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">لعبة المشنقة</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="try_again">حاول مرة ثانية</string>
    <string name="game_over">حظا اوفر</string>
    <string name="well_done">احسنت</string>
    <string name="next_game">استمر</string>
    <string name="level_label">المرحلة</string>
    
    
    <string name="level">I8Kh0YqqYUy8</string>
    
    
    
	<string name="wait_for_more_level">مبروك، لقد انهيت جميع المراحل</string>
	<string name="new_game_restart">هل تريد اللعب مرة اخرى</string>
	
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

	<string name="default_user_input">_ _ _ _ _ _</string><!-- 1 -->
    
    
    <string name="letter1">ا</string><!-- 1 -->
    <string name="letter2">ب</string><!-- 2 -->
    <string name="letter3">ت</string><!-- 3 -->
    <string name="letter4">ث</string><!-- 4 -->
    
    <string name="letter5">ج</string><!-- 5 -->
    <string name="letter6">ح</string><!-- 6 -->
    <string name="letter7">خ</string><!-- 7 -->
    
    <string name="letter8">د</string><!-- 8 -->
    <string name="letter9">ذ</string><!-- 9 -->
    <string name="letter10">ر</string><!-- 10 -->
    <string name="letter11">ز</string><!-- 11 -->
    
    <string name="letter12">س</string><!-- 12 -->
    <string name="letter13">ش</string><!-- 13 -->
    <string name="letter14">ص</string><!-- 14 -->
    <string name="letter15">ض</string><!-- 15 -->
    <string name="letter16">ط</string><!-- 16 -->
    <string name="letter17">ظ</string><!-- 17 -->
    
    <string name="letter18">ع</string><!-- 18 -->
    <string name="letter19">غ</string><!-- 19 -->
    
    <string name="letter20">ف</string><!-- 20 -->
    <string name="letter21">ق</string><!-- 21 -->
    
    <string name="letter22">ك</string><!-- 22 -->
    <string name="letter23">ل</string><!-- 23 -->
    <string name="letter24">م</string><!-- 24 -->
    <string name="letter25">ن</string><!-- 25 -->
    <string name="letter26">ه</string><!-- 26 -->
    <string name="letter27">و</string><!-- 27 -->
    <string name="letter28">ي</string><!-- 28 -->
    
    <string name="letter29">ة</string><!-- 29 -->
    <string name="letter30">ؤ</string><!-- 30 -->
    <string name="letter31">ئ</string><!-- 31 -->
    <string name="letter32">ء</string><!-- 32 -->
    
    
</resources>
